--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	"author": "xethlyx",
 	"license": "ISC",
 	"dependencies": {
-		"discord.js": "^13.0.0-dev.2675b08.1627603447",
+		"discord.js": "^13.1.0",
 		"dotenv": "^10.0.0",
 		"node-fetch": "^2.6.1",
 		"postgres": "^2.0.0-beta.6",
